# smart-fridge

./: .env.sample  .gitignore  config.py  config.yaml  image_analyzer.html  index.html  main.py  pyproject.toml  requirements.txt
db/: db_operations.py
fastapi/: smart_fridge.py
fastapi_backend/: smart_fridge.py
test/: apitest.py
